# hazelnut-miniapp

./: .gitignore  README.md  TON_CONNECT_FIX.md  app-alternative.js  app.js  index.html  package-lock.json  package.json  style.css  tonconnect-manifest.json  version.js
.github/workflows/: deploy.yml
admin/: .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
admin/src/: App.tsx
admin/src/components/: Layout.tsx
admin/src/context/: AuthContext.tsx
admin/src/lib/: api.ts  mkoinService.ts
backend/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  MKOIN_IMPLEMENTATION_STATUS.md  READY_FOR_PRODUCTION.md  WORK_COMPLETED_SUMMARY.md  optimized-env-config.txt  original_schema.sql  package.json  reset_sqlx_migrations.sh  run_migrations.sh  setup_db.sh  tasks.txt
backend-ts/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package.json  tsconfig.json
backend-ts/contracts-build/: JettonFactory.compiled.json
backend-ts/scripts/: create_admin.sh
backend-ts/src/: app.ts  index.ts
backend/migrations/: .keep  20241231000000_ton_schema.sql  20241231000001_add_users_and_roles.sql  20250107000000_admin_campaign_schema.sql  20250107000001_add_token_address.sql  20260120000001_add_mkoin_contract.sql  20260120000002_add_purchase_tracking.sql  20260120000003_mkoin_mints.sql  20260120000004_add_token_details.sql
backend/prisma/: schema.prisma
backend/scripts/: README.md  create_admin.sh  create_farmer.sh  create_farmer_simple.sql
backend/src/: auth.rs  cache.rs  config.rs  index.ts  lib.rs  main.rs
backend/src/api/: balances.rs  mod.rs  purchases.rs
backend/src/api/admin/: auth.rs  campaigns.rs  mkoin.rs  mod.rs  users.rs
backend/src/db/: mod.rs
backend/src/ton/: address_utils.rs  cell_utils.rs  client.rs  factory_service.rs  indexer.rs  minting.rs  mkoin_service.rs  mod.rs  models.rs  wallet.rs
backend/src/ton/contracts/: constants.rs
backend/tests/: auth_test.rs  campaign_test.rs  user_test.rs
backend/tests/common/: mod.rs
frontend/: .env.example  PHASE1_QA_SUMMARY.txt  PHASE1_TEST_REPORT.md  TELEGRAM_TEST_GUIDE.md  package-lock.json  package.json  package.json.new  tailwind.config.js  vite.config.ts
frontend/frontend/: package-lock.json  package.json
frontend/public/: tonconnect-manifest.json
frontend/src/: App.tsx  App.tsx.new  index.css
frontend/src/lib/: api.ts  (+2 more)
src/: App.scss  App.tsx
src/app/: App.tsx
src/styles/: theme.css
(+183 files in other folders)
