[package]
name = "web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = "2.5.3"
lru = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
prometheus = "0.13.3"
warp = { version = "0.3.6", features = ["tls"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tonlib-core = "0.26.6"
reqwest = { version = "0.12.28", features = ["json"] }
base64 = "0.22.1"
num-bigint = "0.4.6"
